@@ -110,7 +110,7 @@ public abstract class AbstractSolrTestCase extends TestCase {
    * is set.
    */
   public void tearDown() throws Exception {
-    h.close();
+    if (h != null) { h.close(); }
     String skip = System.getProperty("solr.test.leavedatadir");
     if (null != skip && 0 != skip.trim().length()) {
       System.err.println("NOTE: per solr.test.leavedatadir, dataDir will not be removed: " + dataDir.getAbsolutePath());
